--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -13,13 +13,13 @@ defaultMarkdownHandler = "goldmark"
     unsafe = true
 
 [highlight]
-  codeFences = false
+  codeFences = true
   guessSyntax = false
   hl_Lines = ""
   lineNoStart = 1
   lineNos = false
   lineNumbersInTable = true
-  noClasses = false
+  noClasses = true
   style = "dracula"
   tabWidth = 4
 
