--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,8 +50,8 @@ editPage = false
   darkMode = true
   bootStrapJs = true
   breadCrumb = false
-  highLight = true
-  kaTex = true
+  highLight = false
+  kaTex = false
   multilingualMode = false
   docsVersioning = false
   fullWidth = false
