--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -48,7 +48,7 @@ editPage = false
   searchSectionsShow = []
   searchSectionsIndex = []
   darkMode = true
-  bootStrapJs = true
+  bootStrapJs = false
   breadCrumb = false
   highLight = false
   kaTex = false
