--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -51,7 +51,7 @@ editPage = false
   bootStrapJs = false
   breadCrumb = false
   highLight = false
-  kaTex = false
+  kaTex = true
   multilingualMode = false
   docsVersioning = false
   fullWidth = false
